# Lux

./: .gitignore  README.md  test.py
Lux/: Dockerfile  README.rst  app.yaml  docker-compose.yml  pyproject.toml  requirements.txt  startupscript.sh
Lux/data_analysis/: model_testing.py
Lux/docker/backgroundtasks/task1/: requirements.txt
Lux/docker/backgroundtasks/task2/: Dockerfile
Lux/docker/lux/: Dockerfile
Lux/lux/: __init__.py  __main__.py  main.py
Lux/lux/database/: all_stocks_OSLO1.csv  logger.txt  nasdaq_screener_1642613531154.csv  nasdaq_screener_1642614801921.csv  portofolio.pkl
Lux/lux/database/stockprices/: all_stock_values_(2022, 1, 9).pkl  sharpes_ports_(2022, 1, 8).pkl
Lux/lux/src/: portofolio_manager.py
Lux/lux/src/tools/: backgroundprocess1.py  backgroundprocess2.py  interf.py  portofolio_kit.py  pricefetcher.py  stocksaver.py
Lux/lux_dev/: __init__.py  __main__.py  main.py
Lux/lux_dev/database/: portofolio.pkl  shortlist.txt
Lux/lux_dev/database/portofolio_snapshots/jinx/: info.txt
Lux/lux_dev/database/stockprices/: all_stock_vals(2022, 1, 1).pkl  all_stock_vals(2022, 1, 6).pkl  all_stock_vals(2022, 4, 8).pkl
Lux/lux_dev/src/: portofolio_manager.py
Lux/lux_dev/src/tools/: RNN_model.py  interf.py  pricefetcher.py  stocksaver.py
Lux/tests/: test_lux.py
