[tool.poetry]
name = "Lux"
version = "0.1.0"
description = ""
authors = ["MartinRovang <martinrovang@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
pandas-datareader = "^0.10.0"
DateTime = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
