[tool.poetry]
name = "Lux"
version = "0.1.0"
description = ""
authors = ["MartinRovang <martinrovang@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
pandas-datareader = "^0.10.0"
DateTime = "^4.3"
rich = "^10.16.1"
scikit-learn = "^1.0.1"
pmdarima = "^1.8.4"
pyportfolioopt = "^1.5.1"
scipy = "^1.7.3"
fastapi = "^0.71.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
